# nerts-helper

./: .gitignore  Cargo.toml  bot-specs.md  readme.md  specs.md
nerts-bot/: Cargo.toml
nerts-bot/src/: compression.rs  error.rs  lib.rs  lobbyinfo.rs  position.rs
nerts-bot/src/messages/: card.rs  cardoutline.rs  client.rs  mod.rs  notification.rs  player.rs  server.rs
nerts-bot/src/messages/io/: reader.rs  writer.rs
nerts-bot/src/state/: card.rs  mod.rs  player.rs  stack.rs
nerts-helper/: Cargo.toml
nerts-helper/src/: main.rs
