[package]
name = "nerts-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamworks = { path = "../../steamworks-rs" }
steamworks-sys = { path = "../../steamworks-rs/steamworks-sys" }
tokio = { version = "*", features = ["full"] }
thiserror = "*"
flate2 = { version = "*", features = ["zlib"], default-features = false }
log = "*"
