[package]
name = "nerts-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nerts-bot = { path = "../nerts-bot" }
tokio = { version = "*", features = ["full"] }
rand = "*"
log = "*"
flexi_logger = { version = "*", features = ["use_chrono_for_offset"] }
